--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/open-sans": "^4.5.0",
     "framer-motion": "^4.1.17",
     "next": "^11.1.0",
     "next-pwa": "^5.3.1",
