--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "next": "^11.1.0",
     "next-pwa": "^5.3.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
