--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/open-sans": "^4.5.0",
     "framer-motion": "^4.1.17",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^11.1.0",
     "next-pwa": "^5.3.1",
     "react": "^17.0.2",
