--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "swr": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
