--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-youtube": "^7.13.1",
     "sha1": "^1.1.1",
     "swr": "^1.0.0"
   },
