--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@fontsource/open-sans": "^4.5.0",
     "framer-motion": "^4.1.17",
     "isomorphic-unfetch": "^3.1.0",
+    "moment": "^2.29.1",
     "next": "^11.1.0",
     "next-pwa": "^5.3.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-moment": "^1.1.1",
     "react-youtube": "^7.13.1",
     "sha1": "^1.1.1",
     "swr": "^1.0.0"
